--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <h1 class="mb-0">李濬禧
           <span class="text-primary">ALEX I GO </span>
         </h1>
-        <div class="subheading mb-5">新北市新店斯順安街18號, 0960960985 ·
+        <div class="subheading mb-5">新北市新店順安街18號, 0960960985 ·
           <a href="alex521733@email.com">name@email.com</a>
         </div>
         <p class="lead mb-5">大家好~我是粉紅豬小弟，平常的興趣是大喊絕對絕對還有有夠矮go，這些是我的精神喊話，我希望在忙碌之餘，人們都還能記住自己內心的初衷，
