--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <span class="text-primary">alex i go </span>
         </h1>
         <div class="subheading mb-5">新北市新店順安街18號, 0960960985 ·
-          <a href="alex521733@email.com">name@email.com</a>
+          <a href="alex521733@email.com">alex521733@gmail.com</a>
         </div>
         <p class="lead mb-5">大家好~我是粉紅豬小弟!平常的興趣是大喊「絕對絕對」還有「有夠矮go」，這些是我的精神喊話，我希望在忙碌之餘，人們都還能記住自己內心的初衷，
                             就像我喜愛跳舞的心一樣。我愛大家，我是來自世新大學資傳一甲的李濬禧。.</p>
