--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
         <h1 class="mb-0">李濬禧
-          <span class="text-primary">alex i go </span>
+          <span class="text-primary">
+                                    alex i go </span>
         </h1>
         <div class="subheading mb-5">新北市新店順安街18號, 0960960985 ·
           <a href="alex521733@email.com">alex521733@gmail.com</a>
