--- a/index.html
+++ b/index.html
@@ -65,10 +65,12 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-0">李濬禧
+        <h1 class="mb-0">李濬禧 </h1>
+        <h1>
           <span class="text-primary">alex i go </span>
         </h1>
-        <div class="subheading mb-5">新北市新店順安街18號, 0960960985 ·
+        <div class="subheading mb-5">
+        <p>新北市新店順安街18號, 0960960985 </p>
           <a href="alex521733@email.com">alex521733@gmail.com</a>
         </div>
         <p class="lead mb-5">大家好~我是粉紅豬小弟!平常的興趣是大喊「絕對絕對」還有「有夠矮go」，這些是我的精神喊話，我希望在忙碌之餘，人們都還能記住自己內心的初衷，
