--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
         <p class="lead mb-5">大家好~我是粉紅豬小弟!平常的興趣是大喊「絕對絕對」還有「有夠矮go」，這些是我的精神喊話，我希望在忙碌之餘，人們都還能記住自己內心的初衷，
                             就像我喜愛跳舞的心一樣。我愛大家，我是來自世新大學資傳一甲的李濬禧。.</p>
         <div class="social-icons">
-          <a href="#">
-            <i class="fab fa-linkedin-in"></i>
+          <a href="https://www.instagram.com/alex20001014/">
+            <i class="fab fa-instagram"></i>
           </a>
           <a href="#">
             <i class="fab fa-github"></i>
