--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
           <a href="https://www.instagram.com/alex20001014/">
             <i class="fab fa-instagram"></i>
           </a>
-          <a href="#">
-            <i class="fab fa-github"></i>
+          <a href="https://www.facebook.com/people/%E6%9D%8E%E7%BF%8A%E8%B1%AA/100004479242451">
+            <i class="fab fa-facebook-f"></i>
           </a>
-          <a href="#">
-            <i class="fab fa-twitter"></i>
+          <a href="https://www.youtube.com/channel/UCUy-Q7_KrfENOD0qbZFj8rw?view_as=subscriber">
+            <i class="fab fa-youtube"></i>
           </a>
           <a href="#">
             <i class="fab fa-facebook-f"></i>
