--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
           <a href="https://www.youtube.com/channel/UCUy-Q7_KrfENOD0qbZFj8rw?view_as=subscriber">
             <i class="fab fa-youtube"></i>
           </a>
-          <a href="#">
-            <i class="fab fa-facebook-f"></i>
+          <a href="https://github.com/alex20001014">
+            <i class="fab fa-github"></i>
           </a>
         </div>
       </div>
