--- a/index.html
+++ b/index.html
@@ -259,8 +259,8 @@
 				<i class="fab fa-youtube"></i>
 			</ul>
 		</div> 
-        <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-        <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+        <p></p>我的興趣是拍攝影片和剪輯影片，上傳至我的Youtube頻道。平常多拍攝一些紀錄生活的內容，例如Vlog ~　多數為大學生活、旅遊......等。
+        <p class="mb-0">聆聽音樂也是我的興趣之一，平常聽的曲風多為Hip-hop、trap、R&B。如果你也和我一樣是個重度音樂愛好者，一起來聽歌吧！</p>
       </div>
     </section>
 
