--- a/index.html
+++ b/index.html
@@ -188,6 +188,10 @@
         <ul class="list-inline dev-icons">
           <li class="list-inline-item">
             <i class="fab fa-adobe"></i>
+				   Adobe Permiere 影片剪輯
+				   Adobe Illustrator 影像繪圖與創作
+				   Youtube 影片創作
+				   Outfit Of The Day 拍攝人物穿搭
           </li>
           <li class="list-inline-item">
             <i class="fas fa-video"></i>
