--- a/index.html
+++ b/index.html
@@ -188,10 +188,7 @@
         <ul class="list-inline dev-icons">
           <li class="list-inline-item">
             <i class="fab fa-adobe"></i>
-				   Adobe Permiere 影片剪輯
-				   Adobe Illustrator 影像繪圖與創作
-				   Youtube 影片創作
-				   Outfit Of The Day 拍攝人物穿搭
+				   
           </li>
           <li class="list-inline-item">
             <i class="fas fa-video"></i>
@@ -209,16 +206,16 @@
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-check"></i>
-            Mobile-First, Responsive Design</li>
+            Adobe Permiere 影片剪輯</li>
           <li>
             <i class="fa-li fa fa-check"></i>
-            Cross Browser Testing &amp; Debugging</li>
+            Adobe Illustrator 影像繪圖與創作</li>
           <li>
             <i class="fa-li fa fa-check"></i>
-            Cross Functional Teams</li>
+             Youtube 影片創作</li>
           <li>
             <i class="fa-li fa fa-check"></i>
-            Agile Development &amp; Scrum</li>
+            Outfit Of The Day 拍攝人物穿搭</li>
         </ul>
       </div>
     </section>
