--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
       <div class="w-100">
         <h2 class="mb-5">Skills</h2>
 
-        <div class="subheading mb-3">數位化影像處理; Tools</div>
+        <div class="subheading mb-3">數位化影像處理; 人物形象拍攝</div>
         <ul class="list-inline dev-icons">
           <li class="list-inline-item">
             <i class="fab fa-adobe"></i>
