--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
     <hr class="m-0">
 		   <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="favorite">
       <div class="w-100">
-        <h2 class="mb-5"><span class="text-primary">favorite</span>favorite</h2>
+        <h2 class="mb-5"><span class="text-primary">favorite</h2>
 		<div id="accordion">
 		  <div class="card">
 		    <div class="card-header">
@@ -257,12 +257,12 @@
 				<table class="table table-hover">
 				  <thead>
 					<tr>
-					  <th>出版年</th>
-					  <th>作者</th>
-					  <th>論文名稱</th>
+					  <th>成立</th>
+					  <th>設計師</th>
+<!-- 					  <th>品牌/品牌全名</th> -->
 					  <th>期刊</th>
-					  <th>卷期</th>
-					  <th>頁碼</th>
+					  <th>售價</th>
+					  <th>特色</th>
 					</tr>
 				  </thead>
 				  <tbody>
