--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
 					<tr>
 					  <th>成立</th>
 					  <th>設計師</th>
-<!-- 					  <th>品牌/品牌全名</th> -->
+					  <th>品牌/品牌全名</th>
 					  <th>期刊</th>
 					  <th>售價</th>
 					  <th>特色</th>
