--- a/index.html
+++ b/index.html
@@ -246,9 +246,9 @@
     </section>
 
     <hr class="m-0">
-		   <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="favorite">
+		   <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="Favorite">
       <div class="w-100">
-        <h2 class="mb-5"><span class="text-primary">favorite</h2>
+        <h2 class="mb-5"><span class="text-primary">Favorite</h2>
 		<div id="accordion">
 		  <div class="card">
 		    <div class="card-header">
@@ -257,61 +257,41 @@
 				<table class="table table-hover">
 				  <thead>
 					<tr>
-					  <th>成立</th>
-					  <th>設計師</th>
 					  <th>品牌/品牌全名</th>
-					  <th>售價</th>
 					  <th>特色</th>
+					  <th>售價</th>
 					</tr>
 				  </thead>
 				  <tbody>
 					<tr>
-					  <td>2017</td>
-					  <td>林頌堅</td>
-					  <td>以開放資料的教師學術專長彙整表為基礎之學科標準分類分析</td>
-					  <td>教育資料與圖書館學</td>
-					  <td>第五十四卷第一期</td>
-					  <td>69~95</td>
+					  <td>MGD/Mahagrid</td>
+					  <td>美國街頭文化、反光面料</td>
+					  <td>1000~5000</td>
 					</tr>
 					<tr>
-					  <td>2015</td>
-					  <td>林頌堅</td>
-					  <td>利用文字內容主題特徵與機器學習方法探討MIS相關期刊在ISI資料庫上的主題分類</td>
-					  <td>教育資料與圖書館學</td>
-					  <td>第五十二卷第三期</td>
-					  <td>269~298</td>
+					  <td>Paragraph</td>
+					  <td>OVER SIZE、鮮艷顏色、拼接設計</td>
+					  <td>1000-5000</td>
 					</tr>
 					<tr>
-					  <td>2014</td>
-					  <td>林頌堅</td>
-					  <td>資訊科學期刊的主題分布與多樣性研究</td>
-					  <td>圖書資訊學研究</td>
-					  <td>第九卷第一期</td>
-					  <td>171~200</td>
+					  <td>Thisisneverthat </td>
+					  <td>美式風格、滑板、工裝</td>
+					  <td>1000-3000</td>
 					</tr>
 					<tr>
-					  <td>2014</td>
-					  <td>林頌堅</td>
-					  <td>以主題模型方法為基礎的資訊計量學領域研究主題分析</td>
-					  <td>教育資料與圖書館學</td>
-					  <td>第五十一卷第四期</td>
-					  <td>499~523</td>
+					  <td>Vibrate</td>
+					  <td>美式文化、前衛韓國設計、帽子的單品為最亮眼的款式</td>
+					  <td>2000-6000</td>
 					</tr>
 					<tr>
-					  <td>2013</td>
-					  <td>林頌堅</td>
-					  <td>利用網路結構分析的研究主題視覺化</td>
-					  <td>教育資料與圖書館學</td>
-					  <td>第五十卷第四期</td>
-					  <td>565~596</td>
+					  <td>LMC/Lost management cities</td>
+					  <td>音樂及運動文化、滑板文化街頭</td>
+					  <td>1000-5000</td>
 					</tr>
 					<tr>
-					  <td>2012</td>
-					  <td>林頌堅</td>
-					  <td>資訊傳播學領域的研究主題發展分析</td>
-					  <td>資訊傳播研究</td>
-					  <td>第二卷第二期</td>
-					  <td>1~20</td>
+					  <td>Ader error</td>
+					  <td>時尚與文藝、解構創意以及高質感休閒路線</td>
+					  <td>1000-3000</td>
 					</tr>
 				  </tbody>
 				</table>
