--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
         </li>
 	<li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#favorite">Favoritte</a>
+          <a class="nav-link js-scroll-trigger" href="#favorite">Favorite</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
