--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
     </section>
 
     <hr class="m-0">
-		   <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="Favorite">
+		   <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="favorite">
       <div class="w-100">
         <h2 class="mb-5"><span class="text-primary">Favorite</h2>
 		<div id="accordion">
