--- a/index.html
+++ b/index.html
@@ -249,6 +249,7 @@
 		   <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="favorite">
       <div class="w-100">
         <h2 class="mb-5"><span class="text-primary">Favorite</h2>
+	<p>隨著時尚與潮流的變化，韓國潮流文化近幾年來在亞洲大放異彩，包括了嘻哈、運動、復古......等。平時也在我特別關注的時尚中~以下將跟各為分享一些韓國當紅的設計師品牌 ! </p>
 		<div id="accordion">
 		  <div class="card">
 		    <div class="card-header">
