--- a/index.html
+++ b/index.html
@@ -60,6 +60,10 @@
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
         </li>
+
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#gallery">Gallery</a>
+        </li>
       </ul>
     </div>
   </nav>
@@ -299,7 +303,16 @@
 			  </div>
 			</div>
 		  </div>
+<section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="gallery">
+      <div class="w-100">
+        <h2 class="mb-5"><span class="text-primary">Gallery</h2>
 
+        <p> </p>
+
+
+
+     <div class="card-header">
+			       <a> 我的作品</a>
 		 
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="awards">
