--- a/index.html
+++ b/index.html
@@ -306,15 +306,60 @@
 <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="gallery">
       <div class="w-100">
         <h2 class="mb-5"><span class="text-primary">Gallery</h2>
+       <p> </p>
 
-        <p> </p>
+<div id="graph_set">
+<div class="card">
+		  	<div class="card-header">
+			  <a我的作品</a>
+			</div>
+			<div id="graph_setOne" class="collapse show" data-parent="#graph_set" style="">
+			  <div class="card-body">
+			    <div class="row text-center text-lg-left">
+				  <div class="col-md-4">
+					<div class="card border-0 shadow">
+						<img class="card-img-top" src="" alt="直方圖">
+						<div class="card-body text-center">
+							<h5 class="card-title mb-0">直方圖</h5>
+							<div class="card-text text-black-50">106學年各科系大一學生人數分布情形</div>
+						</div>
+					</div>
+				</div>
+				  <div class="col-md-4">
+					<div class="card border-0 shadow">
+						<img class="card-img-top" src="vis_graph/barchart.png" alt="長條圖">
+						<div class="card-body text-center">
+							<h5 class="card-title mb-0">長條圖</h5>
+							<div class="card-text text-black-50">比較106學年度不同等級學生人數</div>
+						</div>
+					</div>
+				</div>
+				  <div class="col-md-4">
+					<div class="card border-0 shadow">
+						<img class="card-img-top" src="vis_graph/linechart.png" alt="折線圖">
+						<div class="card-body text-center">
+							<h5 class="card-title mb-0">折線圖</h5>
+							<div class="card-text text-black-50">103到106學年度大一學生人數變化情形</div>
+						</div>
+					</div>
+				</div>
+				  <div class="col-md-4">
+					<div class="card border-0 shadow">
+						<img class="card-img-top" src="vis_graph/scatterplot.png" alt="散佈圖">
+						<div class="card-body text-center">
+							<h5 class="card-title mb-0">散佈圖</h5>
+							<div class="card-text text-black-50">各學校105與106學年大一學生人數關連</div>
+						</div>
+					</div>
+				</div>
+				</div>
+			  </div>
+			</div>
+		  </div>
 
 
-
-     <div class="card-header">
-			       <a> 我的作品</a>
-		 
-
+     
+			      
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="awards">
       <div class="w-100">
         <h2 class="mb-5">Awards &amp; Certifications</h2>
