--- a/index.html
+++ b/index.html
@@ -318,10 +318,13 @@
 			    <div class="row text-center text-lg-left">
 				  <div class="col-md-4">
 					<div class="card border-0 shadow">
-						<img class="card-img-top" src="" alt="直方圖">
+						<img class="card-img-top" src="IMG_E8317" alt="西裝外套穿搭">
 						<div class="card-body text-center">
-							<h5 class="card-title mb-0">直方圖</h5>
-							<div class="card-text text-black-50">106學年各科系大一學生人數分布情形</div>
+							<h5 class="card-title mb-0">西裝外套穿搭</h5>
+							<div class="card-text text-black-50">Top: korea
+											     Coat: korea
+											     Pants: no brand
+											     Shoes: Dr.Martens</div>
 						</div>
 					</div>
 				</div>
