--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
 			    <div class="row text-center text-lg-left">
 				  <div class="col-md-4">
 					<div class="card border-0 shadow">
-						<img class="card-img-top" src="img/IMG_E8317" alt="西裝外套穿搭">
+						<img class="card-img-top" src="img/IMG_E8317.jpg" alt="西裝外套穿搭">
 						<div class="card-body text-center">
 							<h5 class="card-title mb-0">西裝外套穿搭</h5>
 							<div class="card-text text-black-50">Top: korea
