--- a/index.html
+++ b/index.html
@@ -330,10 +330,13 @@
 				</div>
 				  <div class="col-md-4">
 					<div class="card border-0 shadow">
-						<img class="card-img-top" src="vis_graph/barchart.png" alt="長條圖">
+						<img class="card-img-top" src="img/RCTK9772.jpg" alt="全黑穿搭">
 						<div class="card-body text-center">
-							<h5 class="card-title mb-0">長條圖</h5>
-							<div class="card-text text-black-50">比較106學年度不同等級學生人數</div>
+							<h5 class="card-title mb-0">全黑穿搭</h5>
+							<div class="card-text text-black-50"></div>Top: korea
+											     Coat: korea
+											     Pants: Net
+											     Shoes: Converse one star</div>
 						</div>
 					</div>
 				</div>
@@ -342,7 +345,10 @@
 						<img class="card-img-top" src="vis_graph/linechart.png" alt="折線圖">
 						<div class="card-body text-center">
 							<h5 class="card-title mb-0">折線圖</h5>
-							<div class="card-text text-black-50">103到106學年度大一學生人數變化情形</div>
+							<div class="card-text text-black-50">Top: korea
+											     Coat: korea
+											     Pants: Net
+											     Shoes: Converse one star</div>
 						</div>
 					</div>
 				</div>
