--- a/index.html
+++ b/index.html
@@ -342,13 +342,13 @@
 				</div>
 				  <div class="col-md-4">
 					<div class="card border-0 shadow">
-						<img class="card-img-top" src="vis_graph/linechart.png" alt="折線圖">
+						<img class="card-img-top" src="img/IMG_E1115.jpg" alt="休閒">
 						<div class="card-body text-center">
-							<h5 class="card-title mb-0">折線圖</h5>
+							<h5 class="card-title mb-0">休閒</h5>
 							<div class="card-text text-black-50">Top: korea
-											     Coat: korea
-											     Pants: Net
-											     Shoes: Converse one star</div>
+											     Jacket: Paragraph
+											     Pants: Korea
+											     Shoes: Adidas Yung-1</div>
 						</div>
 					</div>
 				</div>
