--- a/index.html
+++ b/index.html
@@ -354,14 +354,14 @@
 				</div>
 				  <div class="col-md-4">
 					<div class="card border-0 shadow">
-						<img class="card-img-top" src="img/ROHI0163.jpg" alt="春天來了">
+						<img class="card-img-top" src="img/RAIN2660.JPG" alt="襯衫穿搭">
 						<div class="card-body text-center">
-							<h5 class="card-title mb-0">春天來了</h5>
+							<h5 class="card-title mb-0">襯衫穿搭</h5>
 							<div class="card-text text-black-50">Hat: korea
-											     Top: One second
-											     Pants: Korea
-											     Socks: Vans
-											     Shoes: Adidas Yung-1</div>
+											     Shirt: Korea
+											     Top: LMC
+											     Pants: Net
+											     Shoes: New balance 530</div>
 						
 					       </div>
 											    	</div>
