--- a/index.html
+++ b/index.html
@@ -369,14 +369,13 @@
 				</div>
 				  <div class="col-md-4">
 					<div class="card border-0 shadow">
-						<img class="card-img-top" src="img/ROHI0163.jpg" alt="春天來了">
+						<img class="card-img-top" src="img/IMG_E4420.JPG" alt="夏日穿搭">
 						<div class="card-body text-center">
-							<h5 class="card-title mb-0">春天來了</h5>
-							<div class="card-text text-black-50">Hat: korea
-											     Top: One second
+							<h5 class="card-title mb-0">夏日穿搭</h5>
+							<div class="card-text text-black-50">Top: Raucohouse
 											     Pants: Korea
-											     Socks: Vans
-											     Shoes: Adidas Yung-1</div>
+											     Pants: korea
+											     Shoes:  Dr.Martens</div>
 						
 					       </div>
 											    	</div>
