--- a/index.html
+++ b/index.html
@@ -423,10 +423,10 @@
 				<div class="row text-center text-lg-left">
 				  <div class="col-md-4">
 					<div class="card border-0 shadow">
-						<img class="card-img-top" src="WordArt.JPG" alt="">
+						<img class="card-img-top" src="img/KXPW2861.jpg" alt="">
 						<div class="card-body text-center">
-							<h5 class="card-title mb-0">鋼鐵人文字雲</h5>
-							<div class="card-text text-black-50">wordcloud製作</div>
+							<h5 class="card-title mb-0">美麗女友</h5>
+							<div class="card-text text-black-50"></div>
 						</div>
 				  <div class="col-md-4">
 					<div class="card border-0 shadow">
