--- a/index.html
+++ b/index.html
@@ -311,8 +311,8 @@
 <div id="graph_set">
 <div class="card">
 		  	<div class="card-header">
-			  <a class="card-link collapsed" data-toggle="collapse" href="#graph_setOne" aria-expanded="false">
-			
+			  <a class="card-link" data-toggle="collapse" href="#graph_setOne" aria-expanded="true">
+       
 			  </a>
 			</div>
 			</div>
@@ -426,7 +426,7 @@
 						<img class="card-img-top" src="img/KXPW2861.jpg" alt="">
 						<div class="card-body text-center">
 							<h5 class="card-title mb-0">美麗女友</h5>
-							<div class="card-text text-black-50"></div>
+							<div class="card-text text-black-50">比夕陽更美的，是妳</div>
 						</div>
 				  <div class="col-md-4">
 					<div class="card border-0 shadow">
