--- a/index.html
+++ b/index.html
@@ -409,7 +409,11 @@
 											     Top: Mahagrid
 											     Pants: NET
 											     Shoes: New balance 530</div>
-						
+						<div>
+											    <div>
+											    <div>
+											    <div>
+											    <div>
 					       </div>
 											    
 		<div class="card-header">
