--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
 			    <div class="row text-center text-lg-left">
 				  <div class="col-md-4">
 					<div class="card border-0 shadow">
-						<img class="card-img-top" src="Lexus.JPG" alt="">
+						<img class="card-img-top" src="img/IMG_E8317.jpg" alt="">
 						<div class="card-body text-center">
 							<h5 class="card-title mb-0">西裝外套穿搭</h5>
 							<div class="card-text text-black-50">>Top: korea
@@ -330,7 +330,7 @@
 				</div>
 				  <div class="col-md-4">
 					<div class="card border-0 shadow">
-						<img class="card-img-top" src="Sky.JPG" alt="">
+						<img class="card-img-top" src="img/RCTK9772.jpg" alt="">
 						<div class="card-body text-center">
 							<h5 class="card-title mb-0">全黑穿搭</h5>
 							<div class="card-text text-black-50">>Top: korea
@@ -342,7 +342,7 @@
 				</div>
 				  <div class="col-md-4">
 					<div class="card border-0 shadow">
-						<img class="card-img-top" src="Mazda.JPG" alt="">
+						<img class="card-img-top" src="img/IMG_E1115.jpg" alt="">
 						<div class="card-body text-center">
 							<h5 class="card-title mb-0">休閒</h5>
 							<div class="card-text text-black-50">Top: korea
@@ -354,7 +354,7 @@
 				</div>
 				  <div class="col-md-4">
 					<div class="card border-0 shadow">
-						<img class="card-img-top" src="Motor.JPG" alt="">
+						<img class="card-img-top" src="img/RAIN2660.JPG" alt="">
 						<div class="card-body text-center">
 							<h5 class="card-title mb-0">襯衫穿搭</h5>
 							<div class="card-text text-black-50"> Shirt: Korea
@@ -366,7 +366,7 @@
 				</div>
           <div class="col-md-4">
 					<div class="card border-0 shadow">
-						<img class="card-img-top" src="OOTD.JPG" alt="">
+						<img class="card-img-top" src="img/IMG_E4716（3）.jpg" alt="">
 						<div class="card-body text-center">
 							<h5 class="card-title mb-0">夏日穿搭</h5>
 							<div class="card-text text-black-50">Top: Raucohouse
@@ -378,7 +378,7 @@
 				</div>
           <div class="col-md-4">
 					<div class="card border-0 shadow">
-						<img class="card-img-top" src="Dog.JPG" alt="">
+						<img class="card-img-top" src="img/ROHI0163.jpg" alt="">
 						<div class="card-body text-center">
 							<h5 class="card-title mb-0">春天來了</h5>
 							<div class="card-text text-black-50">  Top: One second
@@ -390,7 +390,7 @@
 				</div>
           <div class="col-md-4">
 					<div class="card border-0 shadow">
-						<img class="card-img-top" src="Women.jpg" alt="">
+						<img class="card-img-top" src="img/IMG_E4716（3）.jpg" alt="">
 						<div class="card-body text-center">
 							<h5 class="card-title mb-0">假日</h5>
 							<div class="card-text text-black-50"> Top: Mahagrid
@@ -414,14 +414,14 @@
 				<div class="row text-center text-lg-left">
 				  <div class="col-md-4">
 					<div class="card border-0 shadow">
-						<img class="card-img-top" src="WordArt.JPG" alt="">
+						<img class="card-img-top" src="img/IMG_E0062.jpg" alt="">
 						<div class="card-body text-center">
 							<h5 class="card-title mb-0">大稻埕夕陽</h5>
 							<div class="card-text text-black-50">夕陽無限好，只是近黃昏</div>
 			<div class="row text-center text-lg-left">
 				  <div class="col-md-4">
 					<div class="card border-0 shadow">
-						<img class="card-img-top" src="WordArt.JPG" alt="">
+						<img class="card-img-top" src="img/KXPW2861.jpg" alt="">
 						<div class="card-body text-center">
 							<h5 class="card-title mb-0">漂亮女友</h5>
 							<div class="card-text text-black-50">比夕陽更美的，是妳</div>
