--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
 				</div>
           <div class="col-md-4">
 					<div class="card border-0 shadow">
-						<img class="card-img-top" src="img/IMG_E4716（3）.jpg" alt="">
+						<img class="card-img-top" src="img/IMG_E4420.JPG" alt="">
 						<div class="card-body text-center">
 							<h5 class="card-title mb-0">夏日穿搭</h5>
 							<div class="card-text text-black-50">Top: Raucohouse
