--- a/index.html
+++ b/index.html
@@ -392,10 +392,10 @@
 					<div class="card border-0 shadow">
 						<img class="card-img-top" src="img/IMG_0662（1）.jpg" alt="">
 						<div class="card-body text-center">
-							<h5 class="card-title mb-0">假日</h5>
-							<div class="card-text text-black-50"> Top: Mahagrid
-                Pants: NET
-                Shoes: New balance 530</div>
+							<h5 class="card-title mb-0">女友與我</h5>
+							<div class="card-text text-black-50"> Top: Mahagrid/ Korea
+                Pants: NET/ Korea
+                Shoes: New balance 530/ Converse 1970</div>
 						</div>
 					</div>
 				</div>
