--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
 				</div>
           <div class="col-md-4">
 					<div class="card border-0 shadow">
-						<img class="card-img-top" src="img/IMG_0662（1）.jpg" alt="">
+						<img class="card-img-top" src="IMG_0662（1）.jpg" alt="">
 						<div class="card-body text-center">
 							<h5 class="card-title mb-0">女友與我</h5>
 							<div class="card-text text-black-50"> Top: Mahagrid/ Korea
