--- a/index.html
+++ b/index.html
@@ -418,20 +418,20 @@
 						<div class="card-body text-center">
 							<h5 class="card-title mb-0">大稻埕夕陽</h5>
 							<div class="card-text text-black-50">夕陽無限好，只是近黃昏</div>
-			<div class="row text-center text-lg-left">
-				  <div class="col-md-4">
-					<div class="card border-0 shadow">
-						<img class="card-img-top" src="img/KXPW2861.jpg" alt="">
-						<div class="card-body text-center">
-							<h5 class="card-title mb-0">漂亮女友</h5>
-							<div class="card-text text-black-50">比夕陽更美的，是妳</div>
-						</div>
+					 
 					</div>
 				</div>
 				</div>
 			  </div>
 			</div>
-		 </div>
+			<div class="row text-center text-lg-left">
+				  <div class="col-md-4">
+					<div class="card border-0 shadow">
+						<img class="card-img-top" src="img/KXPW2861.jpg" alt="">
+						<div class="card-body text-center"
+							<h5 class="card-title mb-0">漂亮女友</h5>
+							<div class="card-text text-black-50">比夕陽更美的，是妳</div>
+						
 					</div>
 				</div>
 				</div>
