--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
 				</div>
 				  <div class="col-md-4">
 					<div class="card border-0 shadow">
-						<img class="card-img-top" src="vis_graph/clustered_bar_chart_hue.png" alt="Hue">
+						<img class="card-img-top" src="img/KXPW2861.jpg" alt="">
 						<div class="card-body text-center">
 							<h5 class="card-title mb-0">漂亮女友</h5>
 							<div class="card-text text-black-50">比夕陽更美的，是妳</div>
