--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
 						<img class="card-img-top" src="img/IMG_E0062.jpg" alt="">
 						<div class="card-body text-center">
 							<h5 class="card-title mb-0">大稻埕夕陽</h5>
-							<div class="card-text text-black-50">>夕陽無限好，只是近黃昏</div>
+							<div class="card-text text-black-50">夕陽無限好，只是近黃昏</div>
 						</div>
 					</div>
 				</div>
