--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
 						<img class="card-img-top" src="img/IMG_E8317.jpg" alt="">
 						<div class="card-body text-center">
 							<h5 class="card-title mb-0">西裝外套穿搭</h5>
-							<div class="card-text text-black-50">>Top: korea
+							<div class="card-text text-black-50">Top: korea
                 Coat: korea
                 Pants: no brand
                 Shoes: Dr.Martens</div>
@@ -333,7 +333,7 @@
 						<img class="card-img-top" src="img/RCTK9772.jpg" alt="">
 						<div class="card-body text-center">
 							<h5 class="card-title mb-0">全黑穿搭</h5>
-							<div class="card-text text-black-50">>Top: korea
+							<div class="card-text text-black-50">Top: korea
                 Coat: korea
                 Pants: Net
                 Shoes: Converse one star</div>
