--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Web Developer</h3>
+            <h3 class="mb-0">道明中學108屆勁舞社社長 </h3>
             <div class="subheading mb-3">Intelitec Solutions</div>
-            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+            <p>高中時期熱愛跳舞，在不斷的練習與努力之下成功擔任勁舞社社長。擅長的舞風為Hip-hop,Locking 在擔任社長的時期帶領了同屆幹部和學弟妹參與各種活動，例如:各校舞展、校內表演、聯合迎新、排舞比賽、以及個人solo等等。團隊合作、人際關係、領導力與責任感事我在擔任社團幹部時學到最多的東西。</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">December 2011 - March 2013</span>
