--- a/index.html
+++ b/index.html
@@ -107,20 +107,20 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Senior Web Developer</h3>
-            <div class="subheading mb-3">Intelitec Solutions</div>
-            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+            <h3 class="mb-0">道明中學108屆勁舞社社長</h3>
+            <div class="subheading mb-3">領導者</div>
+            <p>高中時期熱愛跳舞，在不斷的練習與努力之下成功擔任勁舞社社長。擅長的舞風為Hip-hop,Locking 在擔任社長的時期帶領了同屆幹部和學弟妹參與各種活動，例如:各校舞展、校內表演、聯合迎新、排舞比賽、以及個人solo等等。團隊合作、人際關係、領導力與責任感事我在擔任社團幹部時學到最多的東西。</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2013 - Present</span>
+            <span class="text-primary">July 2017- July2018</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">道明中學108屆勁舞社社長 </h3>
-            <div class="subheading mb-3">Intelitec Solutions</div>
-            <p>高中時期熱愛跳舞，在不斷的練習與努力之下成功擔任勁舞社社長。擅長的舞風為Hip-hop,Locking 在擔任社長的時期帶領了同屆幹部和學弟妹參與各種活動，例如:各校舞展、校內表演、聯合迎新、排舞比賽、以及個人solo等等。團隊合作、人際關係、領導力與責任感事我在擔任社團幹部時學到最多的東西。</p>
+            <h3 class="mb-0">Dance Miracle vol.6 Drop The Beats 舞展總召 </h3>
+            <div class="subheading mb-3">企劃者</div>
+            <p>在2018年3月10日舉辦了勁舞社所主辦的舞展。在活動開始前半年便開始和廠商聯繫、拉贊助、聯絡友校、及舞蹈排練，在活動中學系到如何撰寫企畫書，與各校幹部開會商討舞展事宜，街頭表演籌措經費等，是累積人生經驗的一個重要里程碑!</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">December 2011 - March 2013</span>
