--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <p>高中時期熱愛跳舞，在不斷的練習與努力之下成功擔任勁舞社社長。擅長的舞風為Hip-hop,Locking 在擔任社長的時期帶領了同屆幹部和學弟妹參與各種活動，例如:各校舞展、校內表演、聯合迎新、排舞比賽、以及個人solo等等。團隊合作、人際關係、領導力與責任感事我在擔任社團幹部時學到最多的東西。</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">July 2017- July2018</span>
+            <span class="text-primary">July2017-July2018</span>
           </div>
         </div>
 
@@ -123,29 +123,29 @@
             <p>在2018年3月10日舉辦了勁舞社所主辦的舞展。在活動開始前半年便開始和廠商聯繫、拉贊助、聯絡友校、及舞蹈排練，在活動中學系到如何撰寫企畫書，與各校幹部開會商討舞展事宜，街頭表演籌措經費等，是累積人生經驗的一個重要里程碑!</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">December 2011 - March 2013</span>
+            <span class="text-primary">October2017-March2018</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Junior Web Designer</h3>
-            <div class="subheading mb-3">Shout! Media Productions</div>
-            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+            <h3 class="mb-0">亞洲藏壽司外場工讀生</h3>
+            <div class="subheading mb-3">接待及清潔</div>
+            <p>高中畢業時就到藏壽司兼職工讀生，累積了三個月的職場經驗。日本的公司制度較為嚴格，在工作期間汲取多知識，例如:微笑角度的保持、服裝儀容的整潔、團隊合作的重要性、以及責任感及效率。</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">July 2010 - December 2011</span>
+            <span class="text-primary">July 2010-December 2011</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">Web Design Intern</h3>
-            <div class="subheading mb-3">Shout! Media Productions</div>
-            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
+            <h3 class="mb-0">世新大學108學年度傳技展後製組組長</h3>
+            <div class="subheading mb-3">指導及技術</div>
+            <p>負責協調及監督各組員的工作進度，同時負責影片剪輯、影音後製。新的領域也是新的開始，不斷的增進自己的技術，以及累積領導及分配能力。</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">September 2008 - June 2010</span>
+            <span class="text-primary">April2020-May2020</span>
           </div>
         </div>
 
