--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             <p>高中畢業時就到藏壽司兼職工讀生，累積了三個月的職場經驗。日本的公司制度較為嚴格，在工作期間汲取多知識，例如:微笑角度的保持、服裝儀容的整潔、團隊合作的重要性、以及責任感及效率。</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">July 2010-December 2011</span>
+            <span class="text-primary">June2019-August2019</span>
           </div>
         </div>
 
