--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">亞洲藏壽司外場工讀生</h3>
-            <div class="subheading mb-3">接待及清潔</div>
+            <div class="subheading mb-3">服務精神</div>
             <p>高中畢業時就到藏壽司兼職工讀生，累積了三個月的職場經驗。日本的公司制度較為嚴格，在工作期間汲取多知識，例如:微笑角度的保持、服裝儀容的整潔、團隊合作的重要性、以及責任感及效率。</p>
           </div>
           <div class="resume-date text-md-right">
