--- a/index.html
+++ b/index.html
@@ -161,24 +161,24 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">University of Colorado Boulder</h3>
-            <div class="subheading mb-3">Bachelor of Science</div>
-            <div>Computer Science - Web Development Track</div>
-            <p>GPA: 3.23</p>
+            <h3 class="mb-0">台灣世新大學</h3>
+            <div class="subheading mb-3">資訊傳播學系</div>
+           
+            <p>資料整理及傳播、網頁介面設計、專案企劃、數位化影像處理、傳播敘事及理論。</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2006 - May 2010</span>
+            <span class="text-primary">September2019-Present</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">James Buchanan High School</h3>
-            <div class="subheading mb-3">Technology Magnet Program</div>
-            <p>GPA: 3.56</p>
+            <h3 class="mb-0">高雄市私立天主教道明中學</h3>
+            <div class="subheading mb-3">普通科-社會組</div>
+         
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2002 - May 2006</span>
+            <span class="text-primary">September2016-June2019</span>
           </div>
         </div>
 
